--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spelling Conversion Tools</title>
     <link rel="stylesheet" href="https://limorina.id.vn/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
         header {
             background-color: #333;
@@ -41,6 +42,17 @@
     </style>
 </head>
 <body>
+    <div class="topnav-bar">
+        <a href="/">Limorina's Personal Page</a>
+        <a href="javascript:void(0);" class="icon" onclick="toggleNav()">
+            <i class="fa fa-bars"></i>
+        </a>
+        <div id="myLinks">
+            <a href="https://limorina.id.vn/project">Projects</a>
+            <a href="https://limorina.id.vn/document">Documents</a>
+            <a href="https://limorina.id.vn/image">Images</a>
+        </div>
+    </div>
     <header>
         <h1>Spelling Conversion Tools by Limorina</h1>
     </header>
