--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 
     <div class="container">
         <h2>Select a Spelling Conversion Tool</h2>
-        <a href="convert-to-latin.html" class="tool-link">Convert to English Spelling</a>
-        <a href="convert-to-cyrillic.html" class="tool-link">Convert to Russian Cyrillic Script</a>
+        <a href="convert-to-english-spelling.html" class="tool-link">Convert to English Spelling</a>
+        <a href="convert-to-russian-cyrillic.html" class="tool-link">Convert to Russian Cyrillic Script</a>
 
         <!-- Add more links as needed for other tools -->
     </div>
