--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spelling Conversion Tools</title>
+    <link rel="shortcut icon" type="image/png" href="https://limorina.id.vn/image/Sticker_PPG_14_Stelle_01.png"/>
+    <link rel="apple-touch-icon" sizes="180x180" href="https://limorina.id.vn/image/Sticker_PPG_14_Stelle_01.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="https://limorina.id.vn/image/Sticker_PPG_14_Stelle_01.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://limorina.id.vn/image/Sticker_PPG_14_Stelle_01.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://limorina.id.vn/image/Sticker_PPG_14_Stelle_01.png">
+    <title>Spelling Conversion Tools - Limorina's Personal Page</title>
     <link rel="stylesheet" href="https://limorina.id.vn/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
