--- a/index.html
+++ b/index.html
@@ -69,5 +69,6 @@
 
         <!-- Add more links as needed for other tools -->
     </div>
+    <script src="https://limorina.id.vn/script.js"></script>
 </body>
 </html>
