--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             padding: 20px 0;
         }
         .container {
-            max-width: 800px;
+            max-width: 100%;
             margin: 50px auto;
             padding: 20px;
             background-color: white;
