--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
             background-color: #333;
             color: white;
             text-align: center;
-            padding: 20px 0;
         }
         .container {
-            max-width: 100%;
+            max-width: 800px;
             margin: 50px auto;
             padding: 20px;
             background-color: white;
