--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
             <a href="https://limorina.id.vn/image">Images</a>
         </div>
     </div>
-    <header>
-        <h1>Spelling Conversion Tools by Limorina</h1>
-    </header>
+    <div class="box-header">
+        <p style="text-align: center;">Spelling Conversion Tools by Limorina</p>
+    </div>
 
     <div class="container">
         <h2>Select a Spelling Conversion Tool</h2>
