--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
     </div>
     <div class="box-header">
-        <p style="text-align: center;">Spelling Conversion Tools by Limorina</p>
+        <p style="text-align: center;">Spelling Conversion Tools by Limorina (alpha version)</p>
     </div>
 
     <div class="container">
