--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 
     <div class="container">
         <h2>Select a Spelling Conversion Tool</h2>
-        <a href="convert-to-english-spelling.html" class="tool-link">Convert to English Spelling</a>
-        <a href="convert-to-russian-cyrillic.html" class="tool-link">Convert to Russian Cyrillic Script</a>
+        <a href="AzeriAnglicized.html" class="tool-link">Turkish/Azeri Anglicized Input method</a>
+        <a href="LatinRussian.html" class="tool-link">Convert from Latin to Russian Cyrillic Script</a>
 
         <!-- Add more links as needed for other tools -->
     </div>
