--- a/anglicized.html
+++ b/anglicized.html
@@ -73,6 +73,6 @@
         <a href = "usage.html" style = "text-decoration: none; color: white; text-align: center;">Usage</a>
     </div>
 
-    <script src="convertToAnglicized.js"></script>
+    <script src="/database/AzeriAnglicizedInput.js"></script>
 </body>
 </html>
