Update and rename anglicized.html to AzeriAnglicized.html

--- a/AzeriAnglicized.html
+++ b/AzeriAnglicized.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" sizes="192x192" href="https://limorina.id.vn/image/Sticker_PPG_14_Stelle_01.png">
     <link rel="icon" type="image/png" sizes="32x32" href="https://limorina.id.vn/image/Sticker_PPG_14_Stelle_01.png">
     <link rel="icon" type="image/png" sizes="16x16" href="https://limorina.id.vn/image/Sticker_PPG_14_Stelle_01.png">
-    <title>Azerbaijani to Anglicized Spelling Converter</title>
+    <title>Azerbaijani/Turkish to Anglicized Spelling Converter</title>
     <link rel="stylesheet" href="https://limorina.id.vn/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
@@ -59,7 +59,7 @@
     </style>
 </head>
 <body>
-    <header><h1>Azerbaijani Official Spelling to Anglicized Spelling Converter</h1></header>
+    <header><h1>Azerbaijani/Turkish to Anglicized Spelling Converter</h1></header>
 
     <div class="container">
         <div>
