Update and rename transform.html to LatinRussian.html

--- a/LatinRussian.html
+++ b/LatinRussian.html
@@ -73,6 +73,6 @@
         </div>
     </div>
 
-    <script src="converter.js"></script>
+    <script src="/database/LatinRussian.js"></script>
 </body>
 </html>
