--- a/AzeriAnglicized/usage.html
+++ b/AzeriAnglicized/usage.html
@@ -277,6 +277,8 @@
 
     <h2>Example</h2>
     <p>The word <code>Azərbaycan</code> in Azerbaijani can be typed as <code>Azaerbaycan</code> using this method.</p>
-``</div>
+    <p>Similarly, <code>Özgürlük</code> can be typed as <code>Oezuerguerluek</code>, and <code>İstanbul</code> becomes <code>Iistanbul</code>.</p>
+    <p>For a name like <code>Şəms</code>, you would type <code>Shaems</code>, and <code>Qarabağ</code> would be written as <code>Qarabagh</code>.</p>
+  </div>
 </body>
 </html>
